Refactor `web` package related sources